--- a/fixed.cabal
+++ b/fixed.cabal
@@ -19,6 +19,6 @@ library
   exposed-modules:     Data.Vector.Fixed
   -- other-modules:       
   other-extensions:    DataKinds, KindSignatures, ScopedTypeVariables, TypeOperators, TypeFamilies, OverloadedLists
-  build-depends:       base >=4.7 && <4.8, distributive, tagged, vector
+  build-depends:       base >=4.7 && <4.8, distributive, tagged, vector, deepseq
   -- hs-source-dirs:      
   default-language:    Haskell2010
