--- a/fixed.cabal
+++ b/fixed.cabal
@@ -21,6 +21,6 @@ library
                        Data.Vector.Fixed.Linear
   -- other-modules:       
   other-extensions:    DataKinds, KindSignatures, ScopedTypeVariables, TypeOperators, TypeFamilies, OverloadedLists, GeneralizedNewtypeDeriving, DeriveTraversable
-  build-depends:       base >=4.7 && <4.8, vector >=0.10 && <0.11, deepseq >=1.3 && <1.4, distributive >=0.4 && <0.5, ad, reflection, erf, profunctors
+  build-depends:       base >=4.7 && <4.8, vector >=0.10 && <0.11, deepseq >=1.3 && <1.4, distributive >=0.4 && <0.5, ad, reflection, erf, profunctors, mwc-random, hashable, containers, mtl, transformers
   -- hs-source-dirs:      
   default-language:    Haskell2010
