--- a/fixed.cabal
+++ b/fixed.cabal
@@ -19,6 +19,6 @@ library
   exposed-modules:     Data.Vector.Fixed
   -- other-modules:       
   other-extensions:    DataKinds, KindSignatures, ScopedTypeVariables, TypeOperators, TypeFamilies, OverloadedLists, GeneralizedNewtypeDeriving, DeriveTraversable
-  build-depends:       base >=4.7 && <4.8, vector >=0.10 && <0.11, deepseq >=1.3 && <1.4, distributive >=0.4 && <0.5, comonad
+  build-depends:       base >=4.7 && <4.8, vector >=0.10 && <0.11, deepseq >=1.3 && <1.4, distributive >=0.4 && <0.5, comonad, profunctors, ad, reflection
   -- hs-source-dirs:      
   default-language:    Haskell2010
